--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,14 @@ code {
   width: 30%;
   max-width: 350px;
   height: auto;
+  display: block;
+margin-left: auto;
+margin-right: auto;
 }
 
 .page-header{
   font-size: 400%;
+  text-align: center;
 }
 
 hr{
