--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,9 @@ hr{
   color: #919191;
 }
 
-.paragraphs{
-
+.container2 {
+  margin: auto;
+  width: 50%;
+  max-width: 900px; /* 2 */
+  border-radius: 10px;
 }
