OK this is actually what I'm doing

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ code {
 margin-right: auto;
 }
 
+.icons{
+  width: 40%;
+  max-width: 55px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+margin-right: auto;
+}
+
 .page-header{
   font-size: 450%;
   text-align: center;
@@ -62,10 +71,14 @@ h5{
   background-color: rgb(136, 136, 136);
   border-radius: 3px;
   color: rgb(255, 255, 255);
+  height: 40px;
+  vertical-align: middle;
+  line-height: 40px;
+
 }
 
 .container3{
-    width: 40%;
+  width: 60%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
