--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,21 @@ h5{
   margin-left: auto;
   justify-content: center;
 }
+
+.card-images{
+    width: 90%;
+  max-width: 300px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+margin-right: auto;
+}
+
+.card-font{
+  text-align: center;
+}
+
+.centered-button{
+  display: flex;
+  justify-content: center;
+}
