--- a/src/index.css
+++ b/src/index.css
@@ -146,3 +146,14 @@ margin-right: auto;
   margin-left: auto;
 margin-right: auto;
 }
+
+.modal-logo{
+ 
+    width: 50%;
+  max-width: 200px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+margin-right: auto;
+
+}
